# sensor-crawler

./: crawl.sh  pyproject.toml  requirements.txt  scrapy.cfg
sensor_crawler/: channel_pipelines.py  items.py  menu_pipelines.py  middlewares.py  pipelines.py  settings.py
sensor_crawler/model/: __init__.py  channel.py  sensor.py
sensor_crawler/spiders/: sensor.py
