[tool.poetry]
name = "sensor-crawler"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allen.chen@hiero7.com>"]
readme = "README.md"
packages = [{include = "sensor_crawler"}]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
