[tool.poetry]
name = "sensor-crawler"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allen.chen@hiero7.com>"]
readme = "README.md"
packages = [{include = "sensor_crawler"}]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.8.0"
sqlalchemy = "^2.0.4"
pymysql = "^1.0.2"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
